--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <nav>
-        <a href="/">Dashboard</a>
-        <a href="/questions">Questions</a>
-        <a href="/forecasting">Forecasting</a>
-        <a href="/ab_test_analysis">A/B Test Analysis</a>
+        <a href="/flask/">Dashboard</a>
+        <a href="/flask/questions">Questions</a>
+        <a href="/flask/forecasting">Forecasting</a>
+        <a href="/flask/ab_test_analysis">A/B Test Analysis</a>
     </nav>
     <div class="container">
         {% block content %}{% endblock %}
