--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <a href="/flask/">Dashboard</a>
+        <a href="/flask">Dashboard</a>
         <a href="/flask/questions">Questions</a>
         <a href="/flask/forecasting">Forecasting</a>
         <a href="/flask/ab_test_analysis">A/B Test Analysis</a>
